@@ -1,3 +1,10 @@
+2021-06-30  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	PR gdb/27830
+	* infrun.c (displaced_step_finish): Disable thread events.
+	(do_target_resume): Enable thread events when stepping.
+	(finish_step_over): Disable thread events.
+
 2021-05-29  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* frame.c (get_prev_frame_id_by_id): Delete.
